feature: add PING/PONG functionality

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<button (click)="closeConnection()">Закрыть соединение</button>
-<button>Отправить сообщение по SessionId</button>
+<section class="container">
+  <button class="button" (click)="closeConnection()">Закрыть соединение</button>
+  <p class="text">SessionId: {{ sessionId() ?? "SessionId loading..." }}</p>
+</section>
